# vectordb

./: .codespell-whitelist  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  apt.txt  devcontainer.json  environment.yml  postBuild.sh
.github/: dependabot.yml
.github/matchers/: pylint.json
.github/workflows/: build.yml  ci.yml  pylint.yml
docker/: Dockerfile  environment.yml
docs/: requirements.txt
docs/source/: _toc.yml  contributing.rst  getting_started.rst  install.rst  license.rst
docs/source/examples/: ai_rss_reader.ipynb
memory/: embedding.py  memory.py  vector_search.py
src/vectordb/: __init__.py  _version.py  embedding.py  memory.py  vector_search.py
vectordb/: __init__.py  chunking.py  embedding.py  memory.py  storage.py  vector_search.py
