[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectordb2"
dynamic = ["version"]
description = "A lightweight Python package for storing and retrieving text using chunking, embedding, and vector search"
readme = "README.md"
license = ""
authors = [
    { name = "Vladimir Prelovac", email = "vlad@kagi.com" },
]
keywords = [
    "chunking",
    "embedding",
    "search",
    "text",
    "vector",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "faiss-cpu",
    "numpy>=1.21.0",
    "scikit-learn>=0.24.0",
    "scipy>=1.7.0",
    "sentence_transformers",
    "tensorflow_text",
    "torch>=1.9.0",
    "transformers>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/kagisearch/vectordb"

[tool.hatch.version]
path = "vectordb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/vectordb",
]
